deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cuffney-com
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cuffney-com
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
